# InNoteView

./: README.md  Untitled.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_lock.txt  setup.cfg  template.py  tox.ini
.github/workflows/: ci.yml
src/InNoteView/: __init__.py  custom_exceptions.py  logger.py  site.py  youtube.py
tests/: __init__.py  test_site.py  test_youtube.py
