[metadata]
name = innoteview
version = 0.0.1
author = Pavan Pinapatruni
author_email = pavanmay19@gmail.com
description = Render websites and YouTube videos inside Jupyter Notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pavanpinapatruni/InNoteView
project_urls =
    Bug Tracker = https://github.com/Pavanpinapatruni/InNoteView/issues
    Source Code = https://github.com/Pavanpinapatruni/InNoteView
    Documentation = https://github.com/Pavanpinapatruni/InNoteView#readme
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Jupyter
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
    Development Status :: 3 - Alpha
keywords =
    jupyter
    notebook
    iframe
    youtube
    website
    render
    colab
    data-science
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    ipython>=7.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    tox>=4.0.0
    flake8>=5.0.0
    mypy>=0.900
    build>=0.7.0
    twine>=4.0.0
    setuptools>=65.0.0
    wheel>=0.38.0
testing =
    pytest>=7.0.0
    flake8>=5.0.0
    mypy>=0.900

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    build,
    dist,
    venv,
    *.egg-info